--- a/MyProject.css
+++ b/MyProject.css
@@ -2,32 +2,36 @@
 h1{
 
     font-size:50px;
-
     font-style:italic;
     background-color: rgb(230, 142, 11);
-
    text-align: center;
 }
 
-a{
-    color: ivory;
-  
-}
-  
-  li {
-    display: flex;
-    flex: 20px;
-    flex-direction:column-reverse;
-    align-items: center;
-    color: rgb(15, 15, 15);
-    /* text-align: center; */
-    padding: 14px 16px;
-    /* width: 100%; */
-    font-size: 15px;
-   background-color: #b5c0bc;
-  }
 
-  
+
+
+
+ 
+  li {
+    display:flex;
+    float: right;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 15px 134px;
+   width: 94px;
+    text-decoration: none;
+    font-size: 17px;
+    background-color: #04AA6D;
+    color: white;
+    margin: 1px;
+ }
+
+
+
+
+
+
+
   button:hover {
     opacity: 0.7;
     font-size: 20px;
@@ -36,7 +40,13 @@ a{
   img{
     border: rgb(223, 35, 35) solid 1px; 
     justify-self: center;
-
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width:80%;
+    height: 80%;
+  
   }
+
   
   
