--- a/MyProject2.css
+++ b/MyProject2.css
@@ -1,15 +1,55 @@
+body{
+  background-color: ivory;
+}
 img{
 
-    display:grid;
-    /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); */
-    max-width: 300px;
+    
+   display:grid;
+     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); 
+     max-width: 300px;
     margin: auto;
     text-align: center;
     width: 200px;
-    padding: 100px;
+    padding: 100px; 
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+
+  }
+  p{
+    text-align: center;
+    padding: 10px;
+    height: 10px;
+    width: 200px;
+    background-color:khaki;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+
+
+  }
+  a{
+    color: black;
+  }
+  button{
+    text-align: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    color: #000;
+  }
+  input{
+      text-align: center;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      color: #000;
+    
   }
   
   button:hover {
-    opacity: 0.7;
-    background-color: rgb(243, 92, 4);
+    opacity: 1;
+    font-size:20px;
+    background-color: rgb(235, 160, 111);
   }
+ 
